2006-01-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/identifier.cpp :
	* lib/identifier.h :

	  - Identifiers can now also be time intervals.

	  - Reorganised macro definitions to include an interval type.

	* lib/symtab.cpp :
	* lib/symtab.h :

	  - Symtab now also stores time interval identifiers.

	* lib/fact.cpp :
	* lib/mapper.cpp :
	* lib/polbase.cpp :
	* main/policy.y :

	  - Now uses new identifier macros.

2006-01-03  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* configure.ac :
	* configure :

	  - Vlad package now requires a working libtribe.

2005-12-30  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Merged with vlad-1_4_1

	* Tagged vlad-1_4_1

	* lib/identifier.h :

	  - VLAD_IDENT_ENT was not part of the entity types.

2005-12-28  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagged vlad-1_4_0

2005-12-24  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/fact.cpp :
	* lib/identifier.cpp :
	* lib/identifier.h :
	* lib/mapper.cpp :
	* lib/symtab.cpp :

	  - Cleanup of identifier macros.

	* samples/ground.vlp :
	* samples/ground.vla :

	  - A simple program to test grounding mechanism.

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Constraint rule grounding is now performed in compute_evaluate()
	    and compute_generate() instead of when they come in.

	  - Added generate_rule() and evaluate_rule().

2005-12-16  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :

	  - Removed the unused version of replace() that takes a single entity
	    and single variable.

2005-12-15  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :

	  - Now uses the rule constructor functions instead of using numlists.

	* lib/smwrap.cpp :
	* lib/smwrap.h :

	  - Added rule constructor functions.

2005-12-14  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :
	* lib/polbase.h :
